# MCP-Project-Workflows

./: .gitignore  Makefile  README.md  code_workflow_example.py  memory.md  pyproject.toml  requirements.txt  scaffold.py
diagrams/: README.md  design_flow_diagram.md  high_level_diagram.md  low_level_diagram.md
docs/: conf.py  index.rst  workflows.md
src/mcp_workflows/: __init__.py  builder.py  cli.py  executors.py  factories.py  hooks.py  main.py  orchestrator.py  spec.py  tasks.py  templates.py
tasks/: base_design.yaml  base_implement.yaml  base_requirements.yaml  base_test.yaml  normalize.md  quality_gate.md
tests/: conftest.py  test_builder.py  test_cli.py  test_factories.py  test_main.py  test_orchestrator.py
workflows/: code_workflow.yaml  demo.yaml
workflows/my_test_workflow/: README.md  workflow.yaml
workflows/my_test_workflow/config/: steps.yaml
workflows/my_test_workflow/memory/: session.md
